[project]
name = "pfcom"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill Diduk",email = "kirill.diduk@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "textual (>=6.8.0,<6.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
